# coreason-search

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md  requirements.md  usage.md  zero_copy.md
src/coreason_search/: __init__.py  config.py  db.py  embedder.py  engine.py  fusion.py  graph_client.py  interfaces.py  main.py  reranker.py  schemas.py  scout.py  server.py  veritas.py
src/coreason_search/embedders/: hf.py  mock.py
src/coreason_search/retrievers/: dense.py  graph.py  sparse.py
src/coreason_search/utils/: __init__.py  common.py  filters.py  logger.py  mapper.py  query_parser.py
tests/: conftest.py  test_complex_systematic.py  test_complex_workflow_identity.py  test_complex_workflow_zero_copy.py  test_config.py  test_config_edge_cases.py  test_db.py  test_db_edge_cases.py  test_embedder.py  test_engine.py  test_engine_async.py  test_engine_config.py  test_engine_facade.py  test_engine_modes.py  test_engine_reconfiguration.py  test_fusion.py  test_graph_client.py  test_identity_propagation.py  test_identity_serialization.py  test_main.py  test_reranker.py  test_schemas.py  test_scout.py  test_server.py  test_user_context_edge_cases.py  test_utils.py  test_utils_common.py  test_utils_query_parser_edge_cases.py  test_veritas.py  test_zero_copy_edge_cases.py
tests/test_embedders/: test_hf_embedder.py
tests/test_retrievers/: test_dense.py  test_graph.py  test_graph_complex.py  test_graph_traversal.py  test_graph_traversal_edge_cases.py  test_sparse.py
