[tool.poetry]
name = "coreason_search"
version = "0.1.0"
description = "coreason-search"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_search", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
lancedb = "^0.26.1"
numpy = "^2.4.1"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_search"
version = "0.1.0"
description = "coreason-search"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_search"
Repository = "https://github.com/CoReason-AI/coreason_search"
Documentation = "https://github.com/CoReason-AI/coreason_search"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
